<resources>
    <string name="app_name">Trainor</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="register">Register</string>
    <string name="toolbox">Toolbox</string>
    <string name="save">Save</string>
    <string name="home">Home</string>
    <string name="sync_courses">Synchronizing courses</string>
    <string name="logging_in">Logging in</string>
    <string name="welcome_loading">Welcome!</string>
    <string name="sync_safety_card">Synchronizing safetycard</string>
    <string name="sync_diploma">Downloading  diplomas</string>
    <string name="ready">Soon ready!</string>
    <string name="courses">Courses</string>
    <string name="diploma">Diplomas</string>
    <string name="saftey_cards">Safety Cards</string>
    <string name="my_company">Documents</string>
    <string name="tools">Tools</string>
    <string name="setting">Settings</string>
    <string name="please_wait">Please wait...</string>
    <string name="forgot_pwd_header_text">Forgot Password</string>
    <string name="found_you">Found You!</string>
    <string name="hmm">Hmmm...</string>
    <string name="discription_found">We have sent you an e-mail with instructions on how to reset your password. If you do not receive an e-mail within next few minutes, please contact us.</string>
    <string name="edit_text_hint">Your username</string>
    <string name="not_found_msg">We could not find anyone with username or email</string>
    <string name="need_help_contact">If you need help logging in, do not hesitate to contact us.</string>
    <string name="forget_pwd">Forgot password?</string>
    <string name="forget_pwd_des">Please fill in your trainor.no username.</string>
    <string name="pwd_rest_link">Send password reset link</string>
    <string name="need_support">Need support?</string>
    <string name="back_to_login">Back to login screen</string>
    <string name="back_to_forget_pwd">Back to forgot password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="dob">Birth day</string>
    <string name="contact_no">Phone number</string>
    <string name="email_id">E-mail</string>
    <string name="english">English</string>
    <string name="norwegian">Norwegian</string>
    <string name="polish">Polish</string>
    <string name="korean">Korean</string>
    <string name="swedish">Swedish</string>
    <string name="logout">Log out</string>
    <string name="change_pwd">Change Password</string>
    <string name="download_courses">Downloads</string>
    <string name="change_photo">Change Photo</string>
    <string name="alertMsgFirstName">Please enter a valid firstname</string>
    <string name="alertMsgEmail">Please enter a valid email</string>
    <string name="alertMsgLasttName">Please enter a valid lastname</string>
    <string name="alertMsgPhone">Please enter a valid phone number</string>
    <string name="username_hint">Please type your username</string>
    <string name="password_hint">Please type your password</string>
    <string name="invalid_uname_pwd">Invalid username or password.</string>
    <string name="change_password">Change password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="repeate_new_pwd">Repeat new password</string>
    <string name="or">OR</string>
    <string name="send_pwd_reset_link">Send me a password reset link by e-mail</string>
    <string name="enter_old_pwd">Please enter old password</string>
    <string name="enter_new_pwd">Please enter new password</string>
    <string name="enter_repeate_new_pwd">Please repeat new password</string>
    <string name="password_not_matched">New password does not match with repeat new password.</string>
    <string name="set_pro_photo">Set profile photo</string>
    <string name="use_camera">Use camera</string>
    <string name="pick_from_gallery">Pick from gallery</string>
    <string name="remove_pro_photo">Remove profile photo</string>
    <string name="view_pro_photo">View profile photo</string>
    <string name="notifications">Notifications</string>
    <string name="notification_headline">Which notifications do you wish to receive?</string>
    <string name="notification_new_courses">New course</string>
    <string name="notification_new_diploma">New diploma</string>
    <string name="notification_courses_expired">Course expired</string>
    <string name="notification_safety_card">New safety card</string>
    <string name="text_header_download">Downloads</string>
    <string name="download_over_wifi">Only download over Wifi</string>
    <string name="no_course_dwnloaded">No course downloaded</string>
    <string name="no_tools_dwnloaded">No tools downloaded</string>
    <string name="downloaded_tools">Downloaded tools</string>
    <string name="downloaded_courses">Downloaded courses</string>
    <string name="dev_button_text">DEVBUTTON: Clear all files</string>
    <string name="delete">Delete</string>
    <string name="deleted_sucessfully">Deleted Sucessfully</string>
    <string name="delete_offline">Delete offline file</string>
    <string name="keep_courses">Keep</string>
    <string name="delete_courses">Delete</string>
    <string name="delete_offline_des">This will remove the course from this device. You will still retain the license, but can not continue where you left off if the course is not yet completed.</string>
    <string name="need_support1">Need Support</string>
    <string name="we_are_happy_hlp">We are happy to help</string>
    <string name="choose_option">Choose one of the options below and we will do what we can to solve your problem.</string>
    <string name="device_not_support_call_fun">Your device does not support this functionality.</string>
    <string name="call_permission_error">Call permission error</string>
    <string name="safety_card_des_1">Safety cards show what work approvals you have for specific companies and installations</string>
    <string name="valid_to">Valid to</string>
    <string name="compny_name">Company name</string>
    <string name="documents">Documents</string>
    <string name="elearn_course_heading">E-learning courses</string>
    <string name="classroom_course_heading">Classroom courses</string>
    <string name="other_courses_heading">Your other courses</string>
    <string name="get_course_heading">Purchase courses </string>
    <string name="bad_file_format">Bad file format</string>
    <string name="no_available_diploma_show">No diploma is available to show.</string>
    <string name="no_any_supported_application">You do not have a pdf viewer installed</string>
    <string name="download_error">Download error</string>
    <string name="no_diploma_available_downloaded">No diploma is available to download.</string>
    <string name="no_elearn_course_des1">You do not currently have any planned or active course.</string>
    <string name="no_elearn_course_des2">Any e-learning or classroom course will be added here as soon as they are ordered.</string>
    <string name="when_no_diploma1">When you complete a Trainor course, your diplomas will be shown here.</string>
    <string name="when_no_diploma2">It does not appear you have any active diplomas right now.</string>
    <string name="back_to_courses">Back to courses</string>
    <string name="start_courses">Start course</string>
    <string name="expired">Expired</string>
    <string name="kontinue">Continue</string>
    <string name="completed">completed</string>
    <string name="completed_capital">Completed</string>
    <string name="language">Language: </string>
    <string name="duration">Duration: </string>
    <string name="mb"> MB</string>
    <string name="this_will_take"> This will take up to </string>
    <string name="of_space_you_have">  of space. You have </string>
    <string name="mb_available_space">  MB available space. </string>
    <string name="navigate">Show on map</string>
    <string name="loading_course_pls_wait">Loading Course Please Wait..</string>
    <string name="hundered_percent">100 % of</string>
    <string name="percent_of">% of</string>
    <string name="downloads_completed">Downloads completed</string>
    <string name="profile">Profile</string>
    <string name="course_loading_msg">If you cancel the download, you can still take the course online</string>
    <string name="crop">Crop</string>
    <string name="setting_saved">Settings saved</string>
    <string name="all_dwnld_file_deleted">All Downloaded Files deleted</string>
    <string name="save_course_offline">Save course offline</string>
    <string name="not_enough_space">Not enough space on device</string>
    <string name="active_diploma">Active diplomas</string>
    <string name="expired_diploma">History</string>
    <string name="get_more_at_trainor_no">Get more courses at Trainor.no</string>
    <string name="profile_image">Profile image</string>
    <string name="change_pwd_success">The password was successfully updated.</string>
    <string name="change_pwd_faliure">Old password incorrect. Please try again.</string>
    <string name="networkError">Network error</string>
    <string name="internalServerError">Internal server error, please try again later.</string>
    <string name="internetErrorTitle">Internet connection error</string>
    <string name="internetErrorMessage">Internet connection not available. Please enable connection and try again.</string>
    <string name="waitMsg">Please wait ...</string>
    <string name="permissionTitle">Permission denied</string>
    <string name="writePermissionMessage">Without this permission, the app will not be able to save any file into the device storage. Are you sure you want to deny this permission?</string>
    <string name="server_error_title">Server error</string>
    <string name="wifi_not_not_ebabled_tools">Wifi is not enabled. Tools files can not be downloaded over Wifi, Please enable connection and try again.</string>
    <string name="safety_card_exception">Safety card exception</string>
    <string name="try_after_some_time">Please try again later.</string>
    <string name="image_compression_error">Image compression error</string>
    <string name="image_not_supported">Image format not supported</string>
    <string name="image_crop_exception">Image crop exception</string>
    <string name="file_error">File error</string>
    <string name="pic_loading_error">Could not load this photo, please try again.</string>
    <string name="file_not_found">File not found</string>
    <string name="course_file_not_exist">Course file does not exist.</string>
    <string name="wifi_not_not_ebabled_course">Wifi is not enabled. Courses files can not be downloaded over Wifi, Please enable connection and try again.</string>
    <string name="address_not_found">Address not found</string>
    <string name="diploma_not_found">Diploma not found</string>
    <string name="loading">Loading</string>
    <string name="download">Download</string>
    <string name="server_error_msg">Server error, please try again later</string>
    <string name="title_activity_google_map">Map</string>
    <string name="Retry">Retry</string>
    <string name="deny">Deny</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="popup_des1">When buying course via app. your receipt will be from Google Play store.</string>
    <string name="popup_des2">You will not receive a receipt from trainor.no.</string>
    <string name="popup_des3">Please be aware that discounts are not available on in-app purchases and prices may differ from www.trainor.no.</string>
    <string name="btn_i_understand">   I understand   </string>
    <string name="important_info">Important information</string>
    <string name="tool_delete_des"> Are you sure you want Delete this tool? </string>
</resources>