<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <LinearLayout
        android:id="@+id/chosse_compny"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1.9"
            android:paddingLeft="10dp">

            <TextView
                android:id="@+id/txtCourseName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/important_info"
                android:textSize="9pt"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp">

            <ImageView
                android:id="@+id/imgBtnCloseDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_close_courseinfo_dialog" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/popup_des1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/chosse_compny"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/popup_des1" />
    <TextView
        android:id="@+id/popup_des2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/popup_des1"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="0dp"
        android:text="@string/popup_des2" />
    <TextView
        android:id="@+id/popup_des3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/popup_des2"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="15dp"
        android:text="@string/popup_des3" />

    <Button
        android:id="@+id/btn_i_understand"
        android:layout_width="115dp"
        android:layout_height="35dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/popup_des3"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rippel"
        android:backgroundTint="@color/login_button"
        android:text="@string/btn_i_understand"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="15dp" />

</RelativeLayout>