<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.elearn.trainor.SettingModule.ChangePassword">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/custom_page_header" />

    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tool_bar"
        android:orientation="vertical">

        <LinearLayout
            android:layout_marginTop="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/old_password"
                android:textSize="5.5pt"/>

            <EditText
                android:id="@+id/edt_oldPassword"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingLeft="15dp"
                android:inputType="textPassword"
                android:background="@drawable/custom_rectangle_shape"
                android:textSize="7pt" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tool_bar"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_password"
                android:textSize="5.5pt"/>

            <EditText
                android:textSize="7pt"
                android:id="@+id/edt_newPassword"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingLeft="15dp"
                android:inputType="textPassword"
                android:background="@drawable/custom_rectangle_shape" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tool_bar"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repeate_new_pwd"
                android:textSize="5.5pt" />

            <EditText
                android:textSize="7pt"
                android:id="@+id/edt_repeatNewPassword"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingLeft="15dp"
                android:inputType="textPassword"
                android:background="@drawable/custom_rectangle_shape" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginLeft="4dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/change_pwd_shadow">
            <Button
                android:id="@+id/btn_ChangePassword"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/login_button"
                android:text="@string/change_pwd"
                android:textColor="@android:color/white"
                android:textAllCaps="false"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/or"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/txtResetLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/send_pwd_reset_link"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>

</RelativeLayout>
