<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white">

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/delete_offline"
            android:textColor="@android:color/black"
            android:textSize="10pt" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="20dp"
            android:text="@string/tool_delete_des"
            android:textSize="8pt" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="10dp"
            android:gravity="right"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/btnDelete"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/rippel"
                android:clickable="true"
                android:backgroundTint="@android:color/white">
                <TextView
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/white"
                    android:text="@string/delete_courses"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimary"
                    android:textSize="8pt"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btnDismiss"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/rippel"
                android:clickable="true"
                android:backgroundTint="@android:color/white">

                <TextView
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/keep_courses"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimary"
                    android:textSize="8pt"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>