<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.elearn.trainor.SettingModule.ImageCropActivity">

    <com.naver.android.helloyako.imagecrop.view.ImageCropView xmlns:imagecrop="http://schemas.android.com/apk/res-auto"
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        android:layout_centerInParent="true"
        imagecrop:gridInnerColor="#66ffffff"
        imagecrop:gridInnerStroke="1dp"
        imagecrop:gridOuterColor="#ffffff"
        imagecrop:gridOuterStroke="1dp"
        imagecrop:setInnerGridMode="on"
        imagecrop:setOuterGridMode="on"
        android:paddingEnd="170dp"/>

    <LinearLayout
        android:id="@+id/ll_btn_root"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/txtLoading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/please_wait"
            android:textColor="#757575"
            android:textSize="18sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="#757575"
            android:background="@android:color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/crop_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/crop"
            android:background="@android:color/white"
            android:textAllCaps="false"
            android:textColor="#757575"
            android:textSize="18sp" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/loading_spinner"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerInParent="true"
        android:indeterminateTint="@color/color_black"
        android:indeterminateTintMode="src_atop"
        android:visibility="gone" />
</RelativeLayout>
